# rinha2

./: .env  .env.local  .gitignore  Cargo.toml  Dockerfile  api.http  api.sql  docker-compose.local.yml  docker-compose.yml  docker.local.sh  docker.sh  envoy.yaml  haproxy.cfg  init.sql  k6-extrato.js  nginx.conf  nginx.local.conf  postgresql.conf
src/: main.rs
temp/: cliente.db  mem.map  transacao.db  transacao_1.db  transacao_2.db  transacao_3.db  transacao_4.db  transacao_5.db
