[package]
name = "api-yt"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version  = "0.7.4", features = ["tokio"] }
axum-route-error = "5.0.1"
tokio = { version = "1.36.0", features = ["full"] }
anyhow = "1.0.79"
dotenv = "0.15.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
config = "0.14.0"
deadpool-postgres = { version = "0.12.1", features = ["rt_tokio_1","serde"] }
validator = { version = "0.16.1", features = ["derive"] }
axum-valid = { version = "0.15.0", features = ["422"] }

[profile.release]
codegen-units = 1
lto = false

