[package]
name = "api-yt"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version  = "0.7.4", features = ["tokio"] }
tokio = { version = "1.36.0", features = ["full"] }
dotenv = "0.15.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
config = "0.14.0"
deadpool-postgres = { version = "0.12.1", features = ["rt_tokio_1","serde"] }
hyper = "1.1.0"
hyper-util = "0.1.3"
tower-service = "0.3.2"
memmap = "0.7.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
rand = "0.8.5"

#[profile.release]
#codegen-units = 1
#lto = false
#strip = true


